--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Copyright 2013 The Closure Library Authors
 # Files to be ignored by git.
 
@@ -12,5 +11,6 @@
 # python
 *.pyc
 
+.DS_Store
 node_modules
 npm-debug.log
