--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name" : "closure-library",
+  "name" : "obvious-closure-library",
   "version" : "20130319.0.1",
   "description" : "Fork of closure-library that allows installation via NPM.",
   "keywords" : ["javascript", "library", "google", "closure"],
